Done the view column datetime format(Moonshine-IDE/Moonshine-IDE#1017)

--- a/src/view/DominoViewMockVisualEditor.mxml
+++ b/src/view/DominoViewMockVisualEditor.mxml
@@ -631,6 +631,9 @@
 
 
 						colXML.appendChild(numberXML);
+					}else if(c.columnFormatStyle=="datetime"){
+						var datetimeXML:XML = new XML("<datetimeformat />");
+						
 					}
 				}
 
